--- a/client/src/index.css
+++ b/client/src/index.css
@@ -55,17 +55,33 @@ body {
 }
 .save-button {
   position: absolute;
-  top: 25px;
+  top: 90px;
   right: 25px;
   border: 1px solid grey;
   padding: 5px 10px;
   background-color: lightseagreen;
 }
+
 .save-button:hover {
   background-color: green;
   color: white;
 }
-
+.delete-button {
+  position: absolute;
+  bottom: 50px;
+  right: 25px;
+  border: 1px solid grey;
+  padding: 5px 10px;
+  background-color: lightseagreen;
+}
+.edit-button {
+  position: absolute;
+  bottom: 100px;
+  right: 25px;
+  border: 1px solid grey;
+  padding: 5px 10px;
+  background-color: lightseagreen;
+}
 .home-button {
   padding: 5px 10px;
   background-color: lightskyblue;
